hphp/hack/test/typecheck/lambda/new_map_lambda.php.like_types.exp
File "new_map_lambda.php", line 24, characters 25-66:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "new_map_lambda.php", line 25, characters 25-73:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "new_map_lambda.php", line 25, characters 26-31:
Wrong type hint (Typing[4110])
File "new_map_lambda.php", line 25, characters 26-31:
Expected MyEnum
File "new_map_lambda.php", line 25, characters 26-31:
But got dynamic because it is an unenforceable type
File "new_map_lambda.php", line 25, characters 25-73:
Invalid argument (Typing[4110])
File "new_map_lambda.php", line 12, characters 5-26:
Expected ~(function(~string, ~string): [unresolved]) because it is an unenforceable type
File "new_map_lambda.php", line 25, characters 25-73:
But got (function(~MyEnum $value, $name): string)
